tests/NormalTests/paczka1/small_fuzzy/66810640.err
Error in line 3: MIFDwcb A446 73,8
Error in line 1: 4JPvEBT1H A183 34,2
